Add github link to html

--- a/html/index.html
+++ b/html/index.html
@@ -172,9 +172,9 @@ angular.module('stats', ["chart.js"])
 <!-- Footer -->
 <div class="container-fluid" style="background-color: #eee; border-top: 1px solid #ddd;">
 	<div style="padding: 0; margin: 0; line-height: 3;">
+		Source Code: <a href="https://github.com/Phype/telnet-iot-honeypot" target="_blank">https://github.com/Phype/telnet-iot-honeypot</a>
 		
-
-		<span style="unicode-bidi: bidi-override; direction: rtl;">moc [TOD] liamg [TA] rentiej.p :tcatnoC</span>
+		<span style="unicode-bidi: bidi-override; direction: rtl;" class="pull-right">moc [TOD] liamg [TA] rentiej.p :tcatnoC</span>
 	</div>
 </div>
 </div>
