--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,11 @@ angular.module('stats', ["chart.js"])
 
 	$scope.formatDate = function(date) {
 		d = new Date(date * 1000);
+		return d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
+	};
+	
+	$scope.formatDateSecs = function(date) {
+		d = new Date(date * 1000);
 		return d.toTimeString().replace(/.*(\d{2}:\d{2}:\d{2}).*/, "$1");
 	}; 
 });
@@ -132,11 +137,13 @@ angular.module('stats', ["chart.js"])
 		</div>
 		<div class="col-md-8 col-xs-12">
 			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Count</th><th>Name</th><th>SHA256</th><th>Last seen</th></tr>
+				<tr><th>Count</th><th>Name</th><th>SHA256</th><th class="hidden-xs">Size</th><th>Last seen</th></tr>
 				<tr ng-repeat="s in samples">
 					<td>{{ s.count }}</td>
 					<td>{{ s.name }}</td>
-					<td><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256 }}</a></td>
+					<td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,48) + "..." }}</a></td>
+					<td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
+					<td class="hidden-xs">{{ s.length }}</td>
 					<td>{{ formatDate(s.lastseen) }}</td>
 				</tr>
 			</table>
@@ -146,11 +153,14 @@ angular.module('stats', ["chart.js"])
 		<div class="col-md-7 col-xs-12">
 			<h3>Latest Samples</h3>
 			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Time</th><th>Name</th><th>SHA256</th></tr>
+				<tr><th>Time</th><th>Name</th><th>SHA256</th><th>Size</th></tr>
 				<tr ng-repeat="s in latestSamples">
-					<td>{{ formatDate(s.date) }}</td>
+					<td class="visible-xs">{{ formatDate(s.date) }}</td>
+					<td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
 					<td>{{ s.name }}</td>
-					<td><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256 }}</a></td>
+					<td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,48) + "..." }}</a></td>
+					<td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
+					<td>{{ s.length }}</td>
 				</tr>
 			</table>
 		</div>
@@ -160,7 +170,8 @@ angular.module('stats', ["chart.js"])
 			<table class="table table-condensed" style="font-size: 10pt;">
 				<tr><th>Time</th><th>IP</th><th>Username</th><th>Password</th></tr>
 				<tr ng-repeat="s in latestConns">
-					<td>{{ formatDate(s.date) }}</td>
+					<td class="visible-xs">{{ formatDate(s.date) }}</td>
+					<td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
 					<td>{{ s.ip }}</td>
 					<td>{{ s.user }}</td>
 					<td>{{ s.pass }}</td>
