--- a/html/index.html
+++ b/html/index.html
@@ -7,238 +7,204 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.2/angular.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
-<script type="text/javascript" src="https://nack.duckdns.org/backend.php?beta=true"></script>
+<script type="text/javascript" src="https://nack.duckdns.org/backend.php"></script>
 
 <script>
 
 function formatDate(date) {
-	d = new Date(date * 1000);
-	return d.toTimeString().replace(/.*(\d{2}:\d{2}:\d{2}).*/, "$1");
-}
-
-function formatDateTime(date) {
-	if (date == null) return "";
-	d = new Date(date * 1000);
-	return d.getDate() + "." + d.getMonth() + " " + d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
+        d = new Date(date * 1000);
+        return d.toTimeString().replace(/.*(\d{2}:\d{2}:\d{2}).*/, "$1");
 }
 
 angular.module('stats', ["chart.js"])
 .controller('statController', function($scope) {
-	$scope.samples     = [];
-	$scope.threshold   = 0.02;
-	$scope.activeIndex = -1;
+        $scope.samples     = [];
+        $scope.threshold   = 0.02;
+        $scope.activeIndex = -1;
 
-	$scope.processData = function(data) {
-		var list   = [];
-		var count  = 0;
-		var others = 0;
+        $scope.processData = function(data) {
+                var list   = [];
+                var count  = 0;
+                var others = 0;
 
-		for (var i = 0; i < data.length; i++) {
-			count += data[i]["count"];
-		}
+                for (var i = 0; i < data.length; i++) {
+                        count += data[i]["count"];
+                }
 
-		for (var i = 0; i < data.length; i++) {
-			if (data[i]["count"] >= $scope.threshold * count) {
-				var x = data[i]["sha256"].substr(0,2);
-				data[i].color = "#ff" + x + "11"; 
-				list.push(data[i]);
-			} else {
-				others += data[i]["count"];
-			}
-		}
+                for (var i = 0; i < data.length; i++) {
+                        if (data[i]["count"] >= $scope.threshold * count) {
+                                var x = data[i]["sha256"].substr(0,2);
+                                data[i].color = "#dd" + x + "" + x; 
+                                list.push(data[i]);
+                        } else {
+                                others += data[i]["count"];
+                        }
+                }
 
-		list.push({ "name": "Other", "count": others, "color": "#dddddd" });
-		$scope.samples = list;
-	};
+                list.push({ "name": "Other", "count": others, "color": "#dddddd" });
+                $scope.samples = list;
+        };
 
-	$scope.processData(data);
+        $scope.processData(data);
 
-	$scope.labels = $scope.samples.map(function (s) {return s["name"]});
-	$scope.data   = $scope.samples.map(function (s) {return s["count"]});
-	$scope.colors = $scope.samples.map(function (s) {return s["color"]});
+        $scope.labels = $scope.samples.map(function (s) {return s["name"]});
+        $scope.data   = $scope.samples.map(function (s) {return s["count"]});
+        $scope.colors = $scope.samples.map(function (s) {return s["color"]});
 
-	$scope.formatDate = formatDateTime;
+        $scope.formatDate = function(date) {
+                if (date == null) return "";
+                d = new Date(date * 1000);
+                return d.getDate() + "." + d.getMonth() + " " + d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
+        }; 
 }).controller('histController', function($scope) {
-	$scope.history = hist;
-	$scope.series  = ["Urls", "Connections"];
-	$scope.labels  = $scope.history.map(function (s) {
-		if (((s["date"] / 3600) - 1) % 4 == 0) {
-			return new Date(s["date"] * 1000).getHours() + ":00";
-		} else {
-			return "";
-		}
-	});
-	$scope.data    = [
-		$scope.history.map(function (s) { return s["count_url"]}) ,
-		$scope.history.map(function (s) { return s["count"]})
-	];
-}).controller('histController2', function($scope) {
-	$scope.series  = [];
-	$scope.labels  = anal["dates"].map(formatDateTime) ,
-	$scope.data    = [];
-
-	for (var i = 0; i < 8; i++) {
-		var sha256 = data[i]["sha256"];
-		if (anal["samples"][sha256]["data2"])
-			$scope.data.push(anal["samples"][sha256]["data2"]);
-			$scope.series.push(data[i]["result"]);
-	}
-
-	console.log($scope.data);
-
-	//[
-	//	anal["samples"]["33132623f5b37b24b3fd7212419f1080dde41f214ffe89920f737a0591f94b82"]["data2"] ,
-	//	anal["samples"]["df4a0d5a71192be61622cf44220495fc897e53eb04062bcbe6941739a67a1c3a"]["data2"] ,
-	//	anal["samples"]["cbd7a98378aecf45e882a4aca63f4e3c3bff63db78082e416ddf951e6b0f5db6"]["data2"]
-	//];
+        $scope.history = hist;
+        $scope.series  = ["Urls", "Connections"];
+        $scope.labels  = $scope.history.map(function (s) {
+                if (((s["date"] / 3600) - 1) % 4 == 0) {
+                        return new Date(s["date"] * 1000).getHours() + ":00";
+                } else {
+                        return "";
+                }
+        });
+        $scope.data    = [ $scope.history.map(function (s) { return s["count_url"]}) ,
+                $scope.history.map(function (s) { return s["count"]}) ];
 }).controller('basicController', function($scope) {
-	$scope.conns   = base.connections;
-	$scope.urls    = base.urls;
-	$scope.samples = base.samples;
+        $scope.conns   = base.connections;
+        $scope.urls    = base.urls;
+        $scope.samples = base.samples;
 
-	$scope.latestSamples = samples;
-	$scope.latestUrls    = urls;
-	$scope.latestConns   = conns;
+        $scope.latestSamples = samples;
+        $scope.latestUrls    = urls;
+        $scope.latestConns   = conns;
 
-	$scope.formatDate = function(date) {
-		d = new Date(date * 1000);
-		return d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
-	};
-	
-	$scope.formatDateSecs = function(date) {
-		d = new Date(date * 1000);
-		return d.toTimeString().replace(/.*(\d{2}:\d{2}:\d{2}).*/, "$1");
-	}; 
+        $scope.formatDate = function(date) {
+                d = new Date(date * 1000);
+                return d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
+        };
+
+        $scope.formatDateSecs = function(date) {
+                d = new Date(date * 1000);
+                return d.toTimeString().replace(/.*(\d{2}:\d{2}:\d{2}).*/, "$1");
+        }; 
 });
 </script>
 </head>
 <body ng-app="stats">
 <div class="container">
-	<h1>Python telnet honeypot statistics</h1>
-	<p>Visit us at <code>telnet://nack.duckdns.org</code></p>
-	<div class="row">
-		<div class="col-md-6 col-xs-12" ng-controller="basicController">
-			<h3>Basic Statistics</h3>
-			<p>
-				Samples and urls are collected when an URL is provided in
-				the telnet Session by typing something like
-				<code>wget http://1.2.3.4/malware.bin</code>. The file
-				will be downloaded if the URL is not already known and
-				hashed, so that duplicates can be identified. All files
-				are also uploaded to <a href="https://virustotal.com" target="_blank">virustotal.com</a>.
-			</p>
-			<table class="table">
-				<tr><td>Total Connections:</td><td>{{ conns }}</td></tr>
-				<tr><td>Total Urls:</td><td>{{ urls }}</td></tr>
-				<tr><td>Total Samples:</td><td>{{ samples }}</td></tr>
-			</table>
-		</div>
-		<div class="col-md-6 col-xs-12" ng-controller="histController">
-			<h3>Connection history per hour</h3>
-			<canvas id="doughnut" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series"></canvas> 
-			<p>
-				Succesful connections to the telnet server. A successful
-				connection is defined by logging in with username and password.
-				No further execution of commands is needed.
-			</p>
-		</div>
-	</div>
+        <h1>Python telnet honeypot statistics</h1>
+        <p>Visit us at <code>telnet://nack.duckdns.org</code></p>
+        <div class="row">
+                <div class="col-md-6 col-xs-12" ng-controller="basicController">
+                        <h3>Basic Statistics</h3>
+                        <p>
+                                Samples and urls are collected when an URL is provided in
+                                the telnet Session by typing something like
+                                <code>wget http://1.2.3.4/malware.bin</code>. The file
+                                will be downloaded if the URL is not already known and
+                                hashed, so that duplicates can be identified. All files
+                                are also uploaded to <a href="https://virustotal.com" target="_blank">virustotal.com</a>.
+                        </p>
+                        <table class="table">
+                                <tr><td>Total Connections:</td><td>{{ conns }}</td></tr>
+                                <tr><td>Total Urls:</td><td>{{ urls }}</td></tr>
+                                <tr><td>Total Samples:</td><td>{{ samples }}</td></tr>
+                                <tr><td>Detailed Stats:</td><td><a href="detail.html">click here</a></td></tr>
+                        </table>
+                </div>
+                <div class="col-md-6 col-xs-12" ng-controller="histController">
+                        <h3>Connection history per hour</h3>
+                        <canvas id="doughnut" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series"></canvas> 
+                        <p>
+                                Succesful connections to the telnet server. A successful
+                                connection is defined by logging in with username and password.
+                                No further execution of commands is needed.
+                        </p>
+                </div>
+        </div>
+        <div class="row" ng-controller="statController">
+                <div class="col-md-12 col-xs-12">
+                        <h3>Sample distribution by connection count</h3>
+                        <p>
+                                Counting every connection which tried to download a sample.
+                                Connections downloading multiple samples will be counted
+                                multiple times. Also may not display the malware distribution
+                                by sample correctly, because many connections will actually download
+                                nothing because they cannot provide a binary with matching
+                                processor architecture.
+                        </p>
+                </div>
+                <div class="col-md-4 col-xs-12">
+                        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-colors="colors">
+                        </canvas> 
+                </div>
+                <div class="col-md-8 col-xs-12">
+                        <table class="table table-condensed" style="font-size: 10pt;">
+                                <tr><th>Count</th><th>Name</th><th>SHA256</th><th class="hidden-xs">Size</th><th>Last seen</th></tr>
+                                <tr ng-repeat="s in samples">
+                                        <td>{{ s.count }}</td>
+                                        <td>{{ s.name }}</td>
+                                        <td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,48) + "..." }}</a></td>
+                                        <td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
+                                        <td class="hidden-xs">{{ s.length }}</td>
+                                        <td>{{ formatDate(s.lastseen) }}</td>
+                                </tr>
+                        </table>
+                </div>
+        </div>
+        <div class="row" ng-controller="basicController">
+                <div class="col-md-7 col-xs-12">
+                        <h3>Latest Samples</h3>
+                        <table class="table table-condensed" style="font-size: 10pt;">
+                                <tr><th>Time</th><th>Name</th><th>SHA256</th><th>Size</th></tr>
+                                <tr ng-repeat="s in latestSamples">
+                                        <td class="visible-xs">{{ formatDate(s.date) }}</td>
+                                        <td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
+                                        <td>{{ s.name }}</td>
+                                        <td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,48) + "..." }}</a></td>
+                                        <td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
+                                        <td>{{ s.length }}</td>
+                                </tr>
+                        </table>
+                </div>
 
-	<div class="row">
-		<div class="col-md-12 col-xs-12" ng-controller="histController2">
-			<h3>Top Malware History</h3>
-			<canvas class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series"></canvas>
-		</div>
-		<!--
-		<div class="col-md-6 col-xs-12" ng-controller="histController2">
-		</div>-->
-	</div>
+                <div class="col-md-5 col-xs-12">
+                        <h3>Latest Connections</h3>
+                        <table class="table table-condensed" style="font-size: 10pt;">
+                                <tr><th>Time</th><th>IP</th><th>Username</th><th>Password</th></tr>
+                                <tr ng-repeat="s in latestConns">
+                                        <td class="visible-xs">{{ formatDate(s.date) }}</td>
+                                        <td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
+                                        <td>{{ s.ip }}</td>
+                                        <td>{{ s.user }}</td>
+                                        <td>{{ s.pass }}</td>
+                                </tr>
+                        </table>
+                </div>
 
-	<div class="row" ng-controller="statController">
-		<div class="col-md-12 col-xs-12">
-			<h3>Sample distribution by connection count</h3>
-			<p>
-				Counting every connection which tried to download a sample.
-				Connections downloading multiple samples will be counted
-				multiple times. Also may not display the malware distribution
-				by sample correctly, because many connections will actually download
-				nothing because they cannot provide a binary with matching
-				processor architecture.
-			</p>
-		</div>
-		<div class="col-md-4 col-xs-12">
-			<canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-colors="colors">
-			</canvas> 
-		</div>
-		<div class="col-md-8 col-xs-12">
-			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Count</th><th>Name</th><th>AV Result</th><th>SHA256</th><th class="hidden-xs">Size</th><th>Last seen</th></tr>
-				<tr ng-repeat="s in samples">
-					<td>{{ s.count }}</td>
-					<td>{{ s.name }}</td>
-					<td>{{ s.result }}</td>
-					<td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,32) + "..." }}</a></td>
-					<td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
-					<td class="hidden-xs">{{ s.length }}</td>
-					<td>{{ formatDate(s.lastseen) }}</td>
-				</tr>
-			</table>
-		</div>
-	</div>
-	<div class="row" ng-controller="basicController">
-		<div class="col-md-7 col-xs-12">
-			<h3>Latest Samples</h3>
-			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Time</th><th>Name</th><th>SHA256</th><th>Size</th></tr>
-				<tr ng-repeat="s in latestSamples">
-					<td class="visible-xs">{{ formatDate(s.date) }}</td>
-					<td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
-					<td>{{ s.name }}</td>
-					<td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,48) + "..." }}</a></td>
-					<td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
-					<td>{{ s.length }}</td>
-				</tr>
-			</table>
-		</div>
+                <!--
+                <div class="col-md-5 col-xs-12">
+                        <h3>Latest URLS</h3>
+                        <table class="table table-condensed" style="font-size: 10pt;">
+                                <tr><th>Date</th><th>URL</th></tr>
+                                <tr ng-repeat="s in latestUrls">
+                                        <td>{{ formatDate(s.date) }}</td>
+                                        <td>{{ s.url }}</td>
+                                </tr>
+                        </table>
+                </div>
+                -->
 
-		<div class="col-md-5 col-xs-12">
-			<h3>Latest Connections</h3>
-			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Time</th><th>IP</th><th>Username</th><th>Password</th></tr>
-				<tr ng-repeat="s in latestConns">
-					<td class="visible-xs">{{ formatDate(s.date) }}</td>
-					<td class="hidden-xs">{{ formatDateSecs(s.date) }}</td>
-					<td>{{ s.ip }}</td>
-					<td>{{ s.user }}</td>
-					<td>{{ s.pass }}</td>
-				</tr>
-			</table>
-		</div>
-
-		<!--
-		<div class="col-md-5 col-xs-12">
-			<h3>Latest URLS</h3>
-			<table class="table table-condensed" style="font-size: 10pt;">
-				<tr><th>Date</th><th>URL</th></tr>
-				<tr ng-repeat="s in latestUrls">
-					<td>{{ formatDate(s.date) }}</td>
-					<td>{{ s.url }}</td>
-				</tr>
-			</table>
-		</div>
-		-->
-
-	</div>
+        </div>
 </div>
 
 <!-- Footer -->
 <div class="container-fluid" style="background-color: #eee; border-top: 1px solid #ddd;">
-	<div style="padding: 0; margin: 0; line-height: 3;">
-		Source Code: <a href="https://github.com/Phype/telnet-iot-honeypot" target="_blank">https://github.com/Phype/telnet-iot-honeypot</a>
-		
-		<span style="unicode-bidi: bidi-override; direction: rtl;" class="pull-right">moc [TOD] liamg [TA] rentiej.p :tcatnoC</span>
-	</div>
-</div>
+        <div style="padding: 0; margin: 0; line-height: 3;">
+                Source Code: <a href="https://github.com/Phype/telnet-iot-honeypot" target="_blank">https://github.com/Phype/telnet-iot-honeypot</a>
 
+                <span style="unicode-bidi: bidi-override; direction: rtl;" class="pull-right">moc [TOD] liamg [TA] rentiej.p :tcatnoC</span>
+        </div>
+</div>
+</div>
 </body>
 </html>
