Fix Month display

--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@ angular.module('stats', ["chart.js"])
         $scope.formatDate = function(date) {
                 if (date == null) return "";
                 d = new Date(date * 1000);
-                return d.getDate() + "." + d.getMonth() + " " + d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
+                return d.getDate() + "." + (d.getMonth() + 1) + " " + d.toTimeString().replace(/.*(\d{2}:\d{2}):\d{2}.*/, "$1");
         }; 
 }).controller('histController', function($scope) {
         $scope.history = hist;
