--- a/html/index.html
+++ b/html/index.html
@@ -123,7 +123,7 @@ angular.module('stats', ["chart.js"])
         </div>
         <div class="row" ng-controller="statController">
                 <div class="col-md-12 col-xs-12">
-                        <h3>Sample distribution by connection count</h3>
+                        <h3>Sample distribution by connection count (last 24h)</h3>
                         <p>
                                 Counting every connection which tried to download a sample.
                                 Connections downloading multiple samples will be counted
