--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@ angular.module('stats', ["chart.js"])
         $scope.samples = base.samples;
 
         $scope.latestSamples = samples;
-        $scope.latestUrls    = urls;
+        //$scope.latestUrls    = urls;
         $scope.latestConns   = conns;
 
         $scope.formatDate = function(date) {
