--- a/html/detail.html
+++ b/html/detail.html
@@ -13,6 +13,9 @@
 
 angular.module('stats', ["chart.js"])
 .controller('histController2', function($scope, $http) {
+	$scope.formatDate     = formatDate;
+	$scope.formatDateTime = formatDateTime;
+        
 	$scope.series  = [];
 	$scope.labels  = [];
 	$scope.data    = [];
@@ -155,7 +158,7 @@ if ("delta" in config) {
 					<td class="hidden-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,32) + "..." }}</a></td>
 					<td class="visible-xs"><a target="_blank" href="https://www.virustotal.com/latest-scan/{{s.sha256}}">{{ s.sha256.substr(0,6) + "..." }}</a></td>
 					<td class="hidden-xs">{{ s.length }}</td>
-					<td>{{ formatDate(s.lastseen) }}</td>
+					<td>{{ formatDateTime(s.lastseen) }}</td>
 				</tr>
 			</table>
 		</div>
