--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,16 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.2/angular.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 <script type="text/javascript" src="common.js"></script>
-<script type="text/javascript" src="backend.php"></script>
 
 <script>
+
+var base = {
+	"conns"   : [],
+	"urls"    : [],
+	"samples" : []
+};
+
+var api  = "http://127.0.0.1:5000";
 
 angular.module('stats', ["chart.js"])
 .controller('statController', function($scope, $http) {
@@ -45,7 +52,7 @@ angular.module('stats', ["chart.js"])
         };
 
 	var since = time() - 24 * 3600;
-	$http.get("backend.php?cmd=getsamplestats&since=" + since).then(function (httpResult) {
+	$http.get(api + "/samples/statistics").then(function (httpResult) {
 		$scope.processData(httpResult.data);
 		
         $scope.formatDate     = formatDate;
@@ -56,22 +63,38 @@ angular.module('stats', ["chart.js"])
 		$scope.colors = $scope.samples.map(function (s) {return s["color"]});
 	});
 
-}).controller('histController', function($scope) {
-        $scope.formatDate     = formatDate;
-        $scope.formatDateTime = formatDateTime;
-        
-        $scope.history = hist;
-        $scope.series  = ["Urls", "Connections"];
-        $scope.labels  = $scope.history.map(function (s) {
-                if (((s["date"] / 3600) - 1) % 4 == 0) {
-                        return new Date(s["date"] * 1000).getHours() + ":00";
-                } else {
-                        return "";
-                }
-        });
-        $scope.data    = [ $scope.history.map(function (s) { return s["count_url"]}) ,
-                $scope.history.map(function (s) { return s["count"]}) ];
+}).controller('histController', function($scope, $http) {
+	$scope.formatDate     = formatDate;
+	$scope.formatDateTime = formatDateTime;
+	
+	$scope.series  = ["Connection"];
+	$scope.labels  = [];
+	$scope.data    = [];
+	
+	$http.get(api + "/history").then(function (httpResult) {
+		$scope.data   = httpResult.data.data;
+		$scope.labels = [];
+		
+		console.log(httpResult.data);
+		
+		var last  = -1;
+		var delta = httpResult.data.delta;
+		var now   = httpResult.data.start;
+		for (var i = 0; i < httpResult.data.data.length; i++) {
+			var d = new Date(now * 1000);
+			if (last != d.getDay()) {
+				$scope.labels[i] = formatDay(now);
+				last = d.getDay();
+			} else {
+				$scope.labels[i] = "";
+			}
+			now += delta;
+		}
+		
+		console.log($scope.data);
+	});
 }).controller('basicController', function($scope) {
+        /*
         $scope.formatDate     = formatDate;
         $scope.formatDateTime = formatDateTime;
         
@@ -82,6 +105,7 @@ angular.module('stats', ["chart.js"])
         $scope.latestSamples = samples;
         //$scope.latestUrls    = urls;
         $scope.latestConns   = conns;
+        */
 });
 </script>
 </head>
@@ -107,8 +131,8 @@ angular.module('stats', ["chart.js"])
                         </table>
                 </div>
                 <div class="col-md-6 col-xs-12" ng-controller="histController">
-                        <h3>Connection history per hour</h3>
-                        <canvas id="doughnut" class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series"></canvas> 
+                        <h3>Connection history</h3>
+                        <canvas class="chart chart-line" chart-data="data" chart-labels="labels" chart-series="series"></canvas> 
                         <p>
                                 Succesful connections to the telnet server. A successful
                                 connection is defined by logging in with username and password.
