--- a/html/detail.html
+++ b/html/detail.html
@@ -8,11 +8,10 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.2/angular.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 <script type="text/javascript" src="common.js"></script>
+<script type="text/javascript" src="apiurl.js"></script>
+
 
 <script>
-
-//var api  = "http://127.0.0.1:5000";
-var api  = "http://phype.pythonanywhere.com";
 
 angular.module('stats', ["chart.js"])
 .controller('histController2', function($scope, $http) {
