--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.2/angular.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 <script type="text/javascript" src="common.js"></script>
+<script type="text/javascript" src="apiurl.js"></script>
 
 <script>
 
