--- a/html/detail.html
+++ b/html/detail.html
@@ -146,6 +146,7 @@ if ("delta" in config) {
 <body ng-app="stats">
 <div class="container">
 	<h1>Python telnet honeypot statistics</h1>
+	<p><a href="index.html">Back</a> to index</p>
 
 	<div class="row" ng-controller="histController2">
 		<div class="col-md-12 col-xs-12">
