--- a/html/detail.html
+++ b/html/detail.html
@@ -8,8 +8,6 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0-rc.2/angular.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
 <script type="text/javascript" src="common.js"></script>
-<script type="text/javascript" src="apiurl.js"></script>
-
 
 <script>
 
@@ -25,22 +23,20 @@ angular.module('stats', ["chart.js"])
 	
 	$scope.samples = {};
 	
-	$scope.from    = null;
-	
-	// var now = new Date().getTime() / 1000;
-	// $scope.delta   = 3600 * config["delta"];
-	// $scope.from    = now - $scope.delta * 40;
-	// $scope.to      = now;
+	var now = new Date().getTime() / 1000;
+	$scope.delta   = 3600 * config["delta"];
+	$scope.from    = now - $scope.delta * 40;
+	$scope.to      = now;
 	
 	// Normalize (See backend.php)
 	// $to    = $to - $to % $delta + $delta;
 	// $from  = $from - $from % $delta;
-	// $scope.to   = $scope.to - $scope.to % $scope.delta + $scope.delta;
-	// $scope.from = $scope.from - $scope.from % $scope.delta;
+	$scope.to   = $scope.to - $scope.to % $scope.delta + $scope.delta;
+	$scope.from = $scope.from - $scope.from % $scope.delta;
 	
 	$scope.makeLables = function() {
 		var date  = $scope.from;
-		var count = Math.floor(($scope.to - $scope.from) / $scope.delta);
+		var count = Math.floor(($scope.to - $scope.from) / $scope.delta) + 1;
 		
 		for (var i = 0; i < count; i++) {
 			$scope.labels.push(formatDateTime(date));
@@ -51,17 +47,14 @@ angular.module('stats', ["chart.js"])
 	$scope.loadSample = function(sample) {
 		console.log("Load " + sample);
 	
-		var url = api + "/history/" + sample;
+		var url = "backend.php?cmd=gethistory&sample=" + sample +
+		"&from="  + $scope.from +
+		"&to="    + $scope.to +
+		"&delta=" + $scope.delta;
+
+		//var r = {"from": $scope.from,"to":$scope.to,"delta":$scope.delta,"data":[0,3,3,2,0,0,0,0,0,0,0,2,1,1,1,2,2,2,1,1,3,3,2,0,0,0]};
 
 		$http.get(url).then(function (httpResult) {
-		
-			if ($scope.from == null) {
-				$scope.from  = httpResult.data.start;
-				$scope.to    = httpResult.data.end;
-				$scope.delta = httpResult.data.delta;
-				$scope.makeLables();
-			}
-		
 			var r = httpResult.data;
 		
 			if (r.from != $scope.from) {
@@ -115,7 +108,7 @@ angular.module('stats', ["chart.js"])
 	};
 	
 	var since = 0;
-        $http.get(api + "/samples/statistics").then(function (httpResult) {
+        $http.get("backend.php?cmd=getsamplestats&since=" + since).then(function (httpResult) {
 			var data = httpResult.data;
 
 			for (var i = 0; i < data.length; i++) {
@@ -128,7 +121,8 @@ angular.module('stats', ["chart.js"])
 
 			$scope.makeLables();
 		
-			$scope.toggle($scope.samples[data[0].sha256]);
+			$scope.toggle($scope.samples[data[1].sha256]);
+			$scope.toggle($scope.samples[data[2].sha256]);
         });	
 });
 
@@ -146,7 +140,6 @@ if ("delta" in config) {
 <body ng-app="stats">
 <div class="container">
 	<h1>Python telnet honeypot statistics</h1>
-	<p><a href="index.html">Back</a> to index</p>
 
 	<div class="row" ng-controller="histController2">
 		<div class="col-md-12 col-xs-12">
