Basci new frontend ready

--- a/html/newindex.html
+++ b/html/newindex.html
@@ -20,10 +20,9 @@
 
 </head>
 <body ng-app="honey">
-
-<a href="#sample/e3a4120c1f2ec3d430ad95f567179280d657739dd906053d0e9b6d45d59ffa93">Red</a>
-
-<div ng-view></div>
-
+<div class="container">
+	<a href="#sample/e3a4120c1f2ec3d430ad95f567179280d657739dd906053d0e9b6d45d59ffa93">Red</a>
+	<div ng-view></div>
+</div>
 </body>
 </html>
