--- a/html/sample.html
+++ b/html/sample.html
@@ -1,6 +1,4 @@
-<div>
-
-<h1>Sample Information about {{ sample.name }}</h1>
+<h1>Sample Info</h1>
 
 <table class="table">
 
@@ -28,5 +26,3 @@
 	</tr>
 
 </table>
-
-</div>
