--- a/html/newindex.html
+++ b/html/newindex.html
@@ -18,10 +18,22 @@
 
 <script type="text/javascript" src="sample.js"></script>
 
+<style type="text/css">
+
+.code {
+	font-family: monospace;
+}
+
+.code-line.isinput {
+	font-weight: bold;
+}
+
+</style>
+
 </head>
 <body ng-app="honey">
 <div class="container">
-	<a href="#sample/e3a4120c1f2ec3d430ad95f567179280d657739dd906053d0e9b6d45d59ffa93">Red</a>
+	<a href="#/">Index</a>
 	<div ng-view></div>
 </div>
 </body>
