--- a/html/sample.html
+++ b/html/sample.html
@@ -17,7 +17,7 @@
 	<tr>
 		<th>Url</th>
 		<th>Date</th>
-		<th>No Connections</th>
+		<th>N⁰ Connections</th>
 	</tr>
 	<tr ng-repeat="url in sample.urls">
 		<td><a href="{{ '#/url/' + encurl(url.url) }}">{{ url.url }}</a></td>
