IP Info, Frontend

--- a/html/connection.html
+++ b/html/connection.html
@@ -4,6 +4,7 @@
 
 	<tr><td>Date</td><td>{{ formatDate(connection.date) }}</td></tr>
 	<tr><td>ID</td><td>{{ connection.id }}</td></tr>
+	<tr><td>IP</td><td>{{ connection.ip }}</td></tr>
 	<tr><td>Username</td><td>{{ connection.user }}</td></tr>
 	<tr><td>Password</td><td>{{ connection.pass }}</td></tr>
 
